# xml2ustx

./: README.md  app.py  config.yml  main.py  pyproject.toml  requirements.txt  run  run.sh  run_app.sh  youarecute.xml
data/: jappo_test.xml  test_openutau.ustx
demo/: french.mxl  saveme.mxl  saveme.ustx  youarecute.ustx
scripts/: applyverb  mix  mix.sh  mix2video  mix5  xml2ustx  xml2ustx.sh
src/: ConfigParser.py  ProjectParser.py  TrackHelpers.py  Utils.py  main.py  streamlit_app.py  ustx_utils.py
src/application/: ApplicationConfig.py  CLIParser.py  ConfigParser.py  JobBuilder.py  Strings.py  Xml2UstxRunner.py
src/application/models/: CommandLineOptions.py  UiOptions.py
src/domain/: ProjectParser.py  TrackHelpers.py
src/domain/models/: Job.py  Note.py  Project.py  Tempo.py  TempoDown.py  TempoUp.py  TimeSignature.py  Track.py  TrackConfig.py
src/models/: ApplicationConfig.py  Event.py  JobConfig.py  Note.py  Project.py  Tempo.py  TimeSignature.py  TimelineEvent.py  Track.py  TrackConfig.py  TrackEvent.py  Voice.py
src/resources/: Resources.py  config.yml
src/ustx/: UstxExport.py  UstxFormatHelpers.py  UstxTempoInterpolation.py
