[project]
name = "xml2ustx"
version = "0.1.0"
description = "Tool to convert XML vocal parts to ustx files for OpenUTAU."
authors = [
    {name = "Krysta Petrie"}
]
license = {text = "GPL"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jsonpickle (>=4.0.1,<5.0.0)",
    "streamlit (>=1.41.1,<2.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "music21 (>=9.3.0,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
